--- a/app/index.html
+++ b/app/index.html
@@ -75,34 +75,35 @@
 		<div class="container">
 			<div class="main__content">
 				<div class="description">
-					<h1 class="description__title">Трейдинг<br> и инвестиции</h1>
+					<h1 class="description__title">Трейдинг и инвестиции</h1>
 					<p class="description__subtitle" id="Ticker">Обучение трейдингу от Артема Ивина</p>
 
 					<div class="included">
-						<ul class="included__list">
-							<li class="included__item">100% индивидуальное обучение по Skype,
-							</li>
-							<li class="included__item">где ответят на ВАШИ вопросы,</li>
-							<li class="included__item">на примере ВАШИХ компаний,</li>
-							<li class="included__item">с рекомендациями в реальном времени.</li>
-							<li class="included__item">Вы получите пошаговый алгоритм действий</li>
-							<li class="included__item">Объяснение через демонстрацию экрана</li>
-
-
-						</ul>
-						<ul class="included__list">
-							<li class="included__item">Фундаментальный и техн. анализ</li>
-							<li class="included__item">Разбор и составление портфеля</li>
-							<li class="included__item">Торговые сигналы по акциям</li>
-							</li>
-							<li class="included__item">Занятия в удобное ВАМ время</li>
-							</li>
-							<li class="included__item">Объяснение простым языком</li>
-							</li>
-							<li class="included__item">Подходит и для начинающих</li>
-							</li>
-
-						</ul>
+						<div class="included__wrap">
+							<div class="included__block">
+								<div class="content">
+									<span>6</span><p>лет торговли в плюс</p>
+								</div>
+							</div>
+							<div class="included__block included__block-margin">
+								<div class="content">
+									<p>Более<span>50%</span>годовой доходности</p>
+								</div>
+							</div>
+							<div class="included__block included__block-marginoff">
+								<div class="content">
+									<p><a class=""
+										href="https://vk.com/away.php?to=https%3A%2F%2Fwww.tinkoff.ru%2Finvest%2Fsocial%2Fprofile%2FArtem_Ivin%2F&el=snippet"
+										target="_blank"><span>О</span></span>ткрытая</a> статистика, говорящая сама за себя</p>
+								</div>
+							</div>
+							<div class="included__block included__block-margin">
+								<div class="content">
+									<p>На деньги с трейдинга посетил<span>61</span>страну</p>
+								</div>
+							</div>
+							
+						</div>
 					</div>
 					<a href="#" class="btn btn--top" data-scroll="#form">Записаться на курс</a>
 				</div>
@@ -365,10 +366,10 @@
 			<div class="rate__content">
 				<div class="rate__item">
 					<div class="item__wrapp">
-						<h3 class="item__title">Индивидуальный курс технического и фундаментального анализа</h3>
-						<p class="item__subtitle">7 занятий по Skype, каждое занятие 60 минут. </p>
-						<span class="item__desc">Пошагово через демонстрацию экрана я покажу и расскажу как найти,
-							проанализировать технически и фундаментально, купить, и продать акции компании с
+						<h3 class="item__title">Индивидуальный курс</h3>
+						<p class="item__subtitle">7 занятий по Skype (ZOOM) </p>
+						<span class="item__desc">Покажу и расскажу как найти,
+							проанализировать, купить и продать акции компании с
 							прибылью. Этот курс позволит тебе стабильно зарабатывать на фондовом рынке</span>
 						<span class="rate__more" id="callMore1">Подробнее</span>
 						<div class="item__price">
@@ -384,7 +385,7 @@
 				</div>
 				<div class="rate__item">
 					<div class="item__wrapp">
-						<h3 class="item__title">1 Индивидуальная консультация по SKYPE, 60 минут</h3>
+						<h3 class="item__title">Индивидуальная консультация по SKYPE (ZOOM)</h3>
 						<p class="item__subtitle"> </p>
 						<span class="item__desc">Ты сможешь лично задать все вопросы по своему портфелю, стратегии,
 							техническому и фундаментальному анализу или сложной ситуации с конкретной акцией. Или например
@@ -405,9 +406,8 @@
 					<div class="item__wrapp">
 						<h3 class="item__title">Сигналы на покупку и продажу акций</h3>
 						<p class="item__subtitle">Доступ в закрытый Telegram канал</p>
-						<span class="item__desc">Я каждый день выкладываю точки входа и выхода из основных сделок, которые
-							есть у меня в портфеле. Если у вас нет времени и желания учиться самому, но вы хотите уже сейчас
-							зарабатывать на фондовом рынке, этот вариант для вас.</span>
+						<span class="item__desc">Нет времени и желания учиться самому, но вы хотите уже сейчас
+							зарабатывать на фондовом рынке? Совершай сделки по моим сигналам из закрытого Telegram канала. </span>
 						<span class="rate__more" id="callMore3">Подробнее</span>
 						<div class="item__price">
 							<div class="price__wrapp">
@@ -427,6 +427,20 @@
 							</div>
 							<a href="https://vk.com/away.php?to=https%3A%2F%2Fauth.robokassa.ru%2FMerchant%2FIndex.aspx%3FMerchantLogin%3Dartemivin.ru%26InvId%3D0%26Culture%3Dru%26Encoding%3Dutf-8%26Description%3DTELEGRAM%25201%2520MONTH%26OutSum%3D1000%26SignatureValue%3D5e14e9791a371b4e929e375b1c427a86&cc_key="
 								class="rate__pay btn" id="robokassa" target="_blank">Оплатить</a>
+						</div>
+					</div>
+				</div>
+				<div class="rate__item">
+					<div class="item__wrapp">
+						<h3 class="item__title">VIP сопровождение</h3>
+						<p class="item__subtitle"> </p>
+						<span class="item__desc">Полная поддержка 24/7 с еженедельными индивидуальными консультациями и рекомендациями по всем портфелям</span>
+						<div class="item__price">
+							<span>Цена:</span>
+							<div class="discount">
+								<span class="item__price--accent">10% от прибыли</span>
+							</div>
+							<a href="#" class="rate__pay btn" target="_blank"data-scroll="#form">Оставить заявку</a>
 						</div>
 					</div>
 				</div>
@@ -692,20 +706,23 @@
 							placeholder="example@mail.ru">
 						<label for="tarif" class="form__label">Выбор тарифа:</label>
 						<div class="select" data-state="">
-							<div class="select__title" data-default="Option 0">Полный Индивидуальный курс 7 занятий</div>
+							<div class="select__title" data-default="Option 0">VIP сопровождение</div>
 							<div class="select__content">
 								<input id="singleSelect0" class="select__input" type="radio"
-									value="Полный индивидуальный курс 7 занятий" name="tarif" checked />
-								<label for="singleSelect0" class="select__label">Полный Индивидуальный курс 7 занятий</label>
+									value="VIP сопровождение" name="tarif" checked />
+								<label for="singleSelect0" class="select__label">VIP сопровождение</label>
 								<input id="singleSelect1" class="select__input" type="radio"
+									value="Полный индивидуальный курс 7 занятий" name="tarif" checked />
+								<label for="singleSelect1" class="select__label">Полный Индивидуальный курс 7 занятий</label>
+								<input id="singleSelect2" class="select__input" type="radio"
 									value="Индивидуальная консультация 60 минут" name="tarif" />
-								<label for="singleSelect1" class="select__label">Индивидуальная консультация 60 минут</label>
-								<input id="singleSelect2" class="select__input" type="radio" value="Сигналы 1 месяц"
+								<label for="singleSelect2" class="select__label">Индивидуальная консультация 60 минут</label>
+								<input id="singleSelect3" class="select__input" type="radio" value="Сигналы 1 месяц"
 									name="tarif" />
-								<label for="singleSelect2" class="select__label">Сигналы 1 месяц</label>
-								<input id="singleSelect3" class="select__input" type="radio" value="Сигналы 12 месяцев"
+								<label for="singleSelect3" class="select__label">Сигналы 1 месяц</label>
+								<input id="singleSelect4" class="select__input" type="radio" value="Сигналы 12 месяцев"
 									name="tarif" />
-								<label for="singleSelect3" class="select__label">Сигналы 12 месяцев</label>
+								<label for="singleSelect4" class="select__label">Сигналы 12 месяцев</label>
 							</div>
 						</div>
 						<div class="personal">
