--- a/app/index.html
+++ b/app/index.html
@@ -926,7 +926,7 @@
 				<div class="title__block">
 					<h4 class="more__title">Индивидуальный курс технического и фундаментального анализа</h4>
 				</div>
-				<p>Занятия проходят по Skype или Zoom, индивидуально, в удобное вам время, у вас будет возможность задать
+				<p>Занятия проходят индивидуально в удобное дл Вас время по Skype или Zoom, продолжительность занятия 60 мин. У вас будет возможность задать
 					любые вопросы как по трейдингу и инвестированию, так и по ipo и криптовалютам. Материал доносится простым
 					понятным языком с примерами и пошаговым алгоритмом действий, чтобы после окончания курса вы смогли
 					самостоятельно найти, проанализировать технически и фундаментально, найти точку входа и купить акцию, и
@@ -941,7 +941,7 @@
 			<div class="modals__wrap">
 				<a href="#" class="close"><img src="images/dest/close.png" alt="close"></a>
 				<div class="title__block">
-					<h4 class="more__title">1 Индивидуальная консультация по SKYPE, 60 минут</h4>
+					<h4 class="more__title">Индивидуальная консультация по SKYPE, 60 минут</h4>
 
 				</div>
 				<p>У вас скопилось много вопросов о фондовом рынке или нужно сделать разбор и ребалансировку портфеля с
